# insint

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: helloworld  radius
src/: lexer.cpp  main.cpp  token.cpp
src/includes/: includes.h  lexer.h  macros.h  token.h
